--- a/kyberkucharka-frontend/src/App.css
+++ b/kyberkucharka-frontend/src/App.css
@@ -94,3 +94,12 @@ nav * {
   max-width: 50%;
   max-height: 50%;
 }
+
+.links {
+  display: flex;
+  align-content: center;
+}
+
+.links * {
+  margin: auto;
+}
