--- a/kyberkucharka-frontend/src/App.css
+++ b/kyberkucharka-frontend/src/App.css
@@ -103,3 +103,26 @@ nav * {
 .links * {
   margin: auto;
 }
+
+.creatingNewIngredient {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.creatingNewIngredientContent {
+  background: black;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.form-error {
+  color: orange;
+}
