--- a/kyberkucharka-frontend/src/index.css
+++ b/kyberkucharka-frontend/src/index.css
@@ -213,6 +213,7 @@ nav * {
   text-align: center;
   display: flex;
   flex-direction: column;
+  font-size: larger;
 }
 
 .floatingWindowContent > * {
@@ -220,8 +221,8 @@ nav * {
   margin: auto;
 }
 
-.floatingWindowContent form * {
-  margin-top: 5px;
+.floatingWindowContent form > * {
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -229,6 +230,14 @@ nav * {
 
 .floatingWindowContent p {
   margin-top: 20px;
+}
+
+.floatingWindowContent input {
+  margin: 10px;
+}
+
+.floatingWindowContent textarea {
+  resize: none;
 }
 
 .button-cancel {
@@ -389,6 +398,14 @@ img.recipe-image {
   height: calc(2vw * var(--main-recipe-size));
 }
 
+.cancel-ingredient-creation {
+  margin-left: auto;
+  margin-right: 0;
+  margin-bottom: 1vw;
+  height: 4vw;
+
+}
+
 .cancel-x:hover {
   transform: rotate(5deg) scale(1.1);
 }
@@ -466,6 +483,31 @@ input.p-like {
   transform: rotate(1deg) scale(1.02);
 }
 
+
+.kyberbutton-send {
+  height: 4vw;
+  width: 15vw;
+
+  background-color: transparent;
+  background-image: url("./assets/box-white.png");
+  background-size: contain;
+
+  border: none;
+  font-size: 1.5vw;
+  font-weight: bold;
+  font-family: inherit;
+  color: white;
+  cursor: pointer;
+
+  display: block;
+}
+
+.kyberbutton-send:hover {
+  transform: rotate(1deg) scale(1.02);
+
+}
+
 .inlined {
   display: inline;
 }
+
