--- a/kyberkucharka-frontend/src/index.css
+++ b/kyberkucharka-frontend/src/index.css
@@ -27,7 +27,8 @@
   font-size: large;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  /* color: rgba(255, 255, 255, 0.87); */
+  color: #1a1a1a;
  /*  background-color: #242424; */
   background-image: url("./assets/table_texture.jpg");
   background-repeat: repeat-y;
@@ -200,6 +201,7 @@ nav * {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  color: rgba(255, 255, 255, 0.87);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -511,3 +513,16 @@ input.p-like {
   display: inline;
 }
 
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  padding: 0 2vw;
+}
+
+.tr-unverified {
+  color: red;
+}
+
+.td-clickable:hover {
+  text-decoration: underline;
+}
