--- a/kyberkucharka-frontend/src/index.css
+++ b/kyberkucharka-frontend/src/index.css
@@ -148,6 +148,7 @@ nav {
   background-size: cover;
   background-repeat: no-repeat;
   background-position:bottom;
+  opacity: 0.95;
 
   padding-top: 0vw;
   padding-left: 2vw;
@@ -560,19 +561,25 @@ table, th, td {
 .card {
   background-image: url("/stickers/sticker-yellow.png");
   background-size: cover;
+  background-repeat: no-repeat;
   opacity: 0.95;
 
-  display: block;
+  padding: 48px;
+  padding-top: 30px;
+  padding-bottom: 40px;
 
-  height: calc(300px * var(--card-size));
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+
+  height: calc(326px * var(--card-size));
   width: calc(300px * var(--card-size));
-  font-size: calc(24px * var(--card-size));
+  font-size: calc(20px * var(--card-size));
 
   color: #1a1a1a;
-  text-shadow: 0px 0px calc(0.1vw * var(--main-recipe-size)) #2a2a2a;
+  text-shadow: 0px 0px calc(2px * var(--main-recipe-size)) #2a2a2a;
+  align-items: center;
 }
-
-
 
 .card:nth-child(5n+1) {
   background-image: url("/stickers/sticker-yellow.png");
@@ -605,12 +612,35 @@ table, th, td {
   transform: rotate(0deg);
 }
 
-.card p {
-  max-height: calc(10vw * var(--card-size));
+.card * {
+  margin: 0;
+}
+
+.card h3 {
   text-overflow: ellipsis;
   overflow: hidden;
   display: -webkit-box;
-  line-clamp: 4;
-  -webkit-line-clamp: 4;
+  line-clamp: 2;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+.card img {
+  display: block;
+  height: 150px;
+  max-width: 250px;
+  box-shadow: 2px 2px 8px black;
+
+  margin: 10px;
+  transform: rotate(-2.5deg);
+}
+
+.card p {
+  max-height: calc(100px * var(--card-size));
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  line-clamp: 3;
+  -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
 }
