--- a/kyberkucharka-frontend/src/styles/buttons.css
+++ b/kyberkucharka-frontend/src/styles/buttons.css
@@ -1,27 +1,40 @@
-.kyberbutton {
+.kyberbutton, .kyberbutton-white {
   /*   height: calc(4vw * var(--main-recipe-size));
       width: calc(15vw * var(--main-recipe-size)); */
   height: 50px;
   width: 200px;
 
   background-color: transparent;
-  background-image: url("/box.png");
   background-size: contain;
   background-repeat: no-repeat;
 
   border: none;
-  font-size: calc(1.5vw * var(--main-recipe-size));
+  font-size: 20px;
   font-weight: bold;
   font-family: inherit;
-  color: #1a1a1a;
   cursor: pointer;
+
+  text-align: center;
 
   display: block;
   margin: auto;
-  margin-bottom: calc(4vw * var(--main-recipe-size));
 }
 
-.kyberbutton:hover {
+.kyberbutton *, .kyberbutton-white * {
+  padding-top: 12px;
+}
+
+.kyberbutton {
+  background-image: url("/box.png");
+  color: #1a1a1a;
+}
+
+.kyberbutton-white {
+  background-image: url("/box-white.png");
+  color: white;
+}
+
+.kyberbutton:hover, .kyberbutton-white:hover {
   transform: rotate(1deg) scale(1.02);
 }
 
@@ -62,25 +75,3 @@
   transform: rotate(1deg) scale(1.02);
 }
 
-.kyberbutton-send {
-  height: 4vw;
-  width: 15vw;
-
-  background-color: transparent;
-  background-image: url("/box-white.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-
-  border: none;
-  font-size: 1.5vw;
-  font-weight: bold;
-  font-family: inherit;
-  color: white;
-  cursor: pointer;
-
-  display: block;
-}
-
-.kyberbutton-send:hover {
-  transform: rotate(1deg) scale(1.02);
-}
