--- a/kyberkucharka-frontend/src/styles/buttons.css
+++ b/kyberkucharka-frontend/src/styles/buttons.css
@@ -39,15 +39,14 @@
 }
 
 .kyberbutton-small {
-  /*   height: calc(3vw * var(--main-recipe-size));
-      width: calc(11.7vw * var(--main-recipe-size)); */
-  height: 80px;
+
   width: 240px;
 
   background-color: transparent;
   background-image: url("/box.png");
   background-size: contain;
   background-repeat: no-repeat;
+  background-position: center;
 
   border: none;
   font-size: 24px;
@@ -63,7 +62,7 @@
   font-weight: bold;
   font-family: inherit;
   color: #1a1a1a;
-  padding-bottom: 20px;
+  padding: 20px;
 }
 
 .kyberbutton-small *:hover {
