--- a/kyberkucharka-frontend/src/styles/index.css
+++ b/kyberkucharka-frontend/src/styles/index.css
@@ -46,11 +46,12 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
   text-decoration: inherit;
+  color:#1a1a1a;
 }
 a:hover {
-  color: #535bf2;
+  transform: rotate(2deg) scale(1.02);
+  color:#1a1a1a;
 }
 
 body {
@@ -117,25 +118,33 @@ nav * {
   transform: rotate(1deg) scale(1.02);
 }
 
-.user-div {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-
-.user-div * {
-  margin-left: 5pt;
-  margin-right: 5pt;
+.logo-link:hover {
+  transform: none;
 }
 
 .links {
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   align-content: center;
+  margin-bottom: 30px;
+}
+
+.links > * {
+  display: block;
+  margin-left: 10pt;
+  margin-right: 10pt;
 }
 
 .links * {
-  margin: auto;
+  font-weight: bold;
 }
+
+.userpage-link * {
+  font-size: 24px;
+  display: inline-flex;
+}
+
 
 .form-error {
   color: orange;
@@ -189,5 +198,9 @@ td {
 
   h1 {
     font-size: 2em;
+  }
+
+  .links {
+    flex-direction: column;
   }
 }
