--- a/kyberkucharka-frontend/src/styles/recipe.css
+++ b/kyberkucharka-frontend/src/styles/recipe.css
@@ -42,7 +42,7 @@
 
 .recipe-body {
   margin-top: 0px;
-  max-width: calc(70vw * var(--main-recipe-size));
+  width: calc(56vw * var(--main-recipe-size));
   position: relative;
 
   background-image: url("/zosit_middle2.png");
@@ -54,13 +54,14 @@
 
   padding-top: calc(0.7vw * var(--main-recipe-size));
   text-align: left;
-  padding-left: 12%;
-  padding-right: 8%;
+  padding-left: calc(9vw * var(--main-recipe-size));
+  padding-right: calc(6vw * var(--main-recipe-size));
 
   padding-bottom: calc(0.5vw * var(--main-recipe-size));
-  /* line-height: 42.7px; */
   line-height: calc(3.449vw * var(--main-recipe-size));
+  margin-bottom: 80px;
 }
+
 
 .recipe-author {
   margin-top: calc(2vw * var(--main-recipe-size));
@@ -95,14 +96,32 @@ img.recipe-image {
   margin-top: calc(4vw * var(--main-recipe-size));
 }
 
+.ingredients-list {
+  padding-inline-start: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
 .ingredients-list li {
   list-style: none;
   padding-left: calc(2vw * var(--main-recipe-size));
-  background-image: url("/bullet-points/point3.png");
+  background-image: url("/bullet-points/point1.png");
   background-repeat: no-repeat;
   background-position-x: left;
   background-position-y: calc(0.5vw * var(--main-recipe-size));
   background-size: calc(1.5vw * var(--main-recipe-size));
+}
+
+.ingredients-list li:nth-child(4n+2) {
+  background-image: url("/bullet-points/point2.png");
+}
+
+.ingredients-list li:nth-child(4n+3) {
+  background-image: url("/bullet-points/point3.png");
+}
+
+.ingredients-list li:nth-child(4n+4) {
+  background-image: url("/bullet-points/point4.png");
 }
 
 .editable-ingredients-list {
@@ -117,25 +136,29 @@ img.recipe-image {
 
 .select-thing {
   margin-top: 0;
-  margin-bottom: calc(1.3vw * var(--main-recipe-size));
+  margin-bottom: calc(1.48vw * var(--main-recipe-size));
   height: calc(4.3vw * var(--main-recipe-size));
 
   color: #1a1a1a;
+}
+
+.add-section-button {
+  margin-bottom: calc(3.6vw * var(--main-recipe-size));
 }
 
 .inliner * {
   display: inline;
 }
 
-.nothing-doer {
+/* .nothing-doer {
   margin: 0;
-}
+} */
 
 .section-name {
   display: flex;
   align-content: flex-start;
   justify-content: space-between;
-  margin-bottom: calc(1.18vw * var(--main-recipe-size));
+  margin-bottom: calc(1vw * var(--main-recipe-size));
 }
 
 .section-name h3 {
@@ -151,13 +174,40 @@ img.recipe-image {
 }
 
 input.p-like {
-    border: none;
-    outline: none;
-    font-size: inherit;
-    font-family: inherit;
-    background: transparent;
-    width: calc(8vw * var(--main-recipe-size));
-    color: inherit;
-    padding: 0;
-    text-shadow: 0px 0px calc(0.05vw * var(--main-recipe-size)) #2a2a2a;
+  border: none;
+  outline: none;
+  font-size: inherit;
+  font-family: inherit;
+  background: transparent;
+  width: calc(8vw * var(--main-recipe-size));
+  color: inherit;
+  padding: 0;
+  text-shadow: 0px 0px calc(0.05vw * var(--main-recipe-size)) #2a2a2a;
+}
+
+.recipe-top-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 70vw;
+}
+
+.recipe-top-buttons * {
+  margin: 10px;
+}
+
+.main-and-sidebar {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+@media only screen and (max-width: 400px) {
+  .recipe-notebook {
+    margin-top: 150px;
+    margin-bottom: 40px;
+    transform: scale(1.4);
   }
+}
