--- a/kyberkucharka-frontend/src/styles/index.css
+++ b/kyberkucharka-frontend/src/styles/index.css
@@ -202,6 +202,10 @@ td {
   transform: none;
 }
 
+.user-page p {
+  font-size: 24px;
+}
+
 @media only screen and (max-width: 1500px) {
   :root {
     --main-recipe-size: 1.0;
