--- a/kyberkucharka-frontend/src/styles/index.css
+++ b/kyberkucharka-frontend/src/styles/index.css
@@ -31,7 +31,7 @@
   /*  background-color: #242424; */
   background-image: url("/table-texture.jpg");
   background-repeat: repeat-y;
-  background-size: 200vh; /* no idea if it's correct, buuut it does seem to work? */
+  background-size: 100vw;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -49,10 +49,12 @@ a {
   text-decoration: inherit;
   color:#1a1a1a;
 }
+
 a:hover {
   transform: rotate(2deg) scale(1.02);
   color:#1a1a1a;
 }
+
 
 body {
   margin: 0;
