--- a/kyberkucharka-frontend/src/styles/index.css
+++ b/kyberkucharka-frontend/src/styles/index.css
@@ -217,6 +217,10 @@ td {
   text-shadow: 0px 0px calc(0.4vw * var(--main-recipe-size)) #2a2a2a;
 }
 
+.react-tooltip {
+  z-index: 10;
+}
+
 @media only screen and (max-width: 1500px) {
   :root {
     --main-recipe-size: 1.0;
