--- a/kyberkucharka-frontend/src/styles/recipe.css
+++ b/kyberkucharka-frontend/src/styles/recipe.css
@@ -194,6 +194,18 @@ input.p-like {
   text-shadow: 0px 0px calc(0.05vw * var(--main-recipe-size)) #2a2a2a;
 }
 
+select.inconspicuous-select {
+  border: none;
+  outline: none;
+  font-size: inherit;
+  font-family: inherit;
+  background: transparent;
+  width: calc(9vw * var(--main-recipe-size));
+  color: inherit;
+  padding: 0;
+  text-shadow: 0px 0px calc(0.05vw * var(--main-recipe-size)) #2a2a2a;
+}
+
 .recipe-top-buttons {
   margin: auto;
   display: flex;
