fix React errors (keys in maps, using value in select)

--- a/kyberkucharka-frontend/src/styles/recipe.css
+++ b/kyberkucharka-frontend/src/styles/recipe.css
@@ -57,6 +57,7 @@
   background-image: url("/zosit_middle2.png");
   background-repeat: repeat-y;
   background-size: calc(70vw * var(--main-recipe-size));
+  opacity: 0.96;
 
   font-size: calc(2vw * var(--main-recipe-size));
   /* min-height: 100vh; */
