--- a/kyberkucharka-frontend/src/styles/search.css
+++ b/kyberkucharka-frontend/src/styles/search.css
@@ -24,3 +24,10 @@
   font-size: 24px;
   font-family: KyberFontSimple;
 }
+
+.search-div input {
+  background-color: white;
+  color: #1a1a1a;
+  border: none;
+  padding: 3px;
+}
