--- a/kyberkucharka-frontend/src/styles/index.css
+++ b/kyberkucharka-frontend/src/styles/index.css
@@ -212,9 +212,14 @@ td {
   padding-left: 20%;
 }
 
-.about a {
+.about a, .highlighted-link {
   display: inline-block;
   text-shadow: 0px 0px calc(0.4vw * var(--main-recipe-size)) #2a2a2a;
+  cursor: pointer;
+}
+
+.highlighted-link:hover {
+  transform: rotate(2deg) scale(1.05);
 }
 
 .react-tooltip {
